# embedthat-bot

./: .env.dist  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  compose.prod.yml  compose.yml  docker-compose.yml  justfile  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: docker-publish.yml
bot/: config.py  dispatcher.py  enum.py  handlers.py
bot/events/: __init__.py  signals.py
bot/events/handlers/: __init__.py  log.py  share.py  stats.py
bot/util/: aiohttp.py  chat.py  chat_action.py  redis.py  redis_lock.py  stats.py  telegram_log_handler.py  youtube.py
bot/util/audio/: download.py  exc.py  pager.py  schema.py
bot/util/social/: __init__.py  download.py  exc.py  schema.py
bot/util/youtube/: enum.py  exc.py  schema.py  translate.py  video.py
bot/worker/: __init__.py  actors.py  broker.py  chat_action.py  error_reporting.py  pipeline.py  waiters.py
docs/superpowers/plans/: 2026-07-02-dramatiq-task-queue.md  2026-07-03-audio-only-platforms.md  2026-07-04-audio-pager-concurrency.md  2026-07-04-audio-pager-delete-resend.md
docs/superpowers/specs/: 2026-07-02-dramatiq-task-queue-design.md  2026-07-02-media-pipeline-controls-design.md  2026-07-03-audio-only-platforms-design.md  2026-07-04-audio-pager-concurrency-design.md  2026-07-04-audio-pager-delete-resend-design.md
