[project]
name = "embedthat-bot"
version = "0.1.0"
description = "Embed links from social media and youtube into telegram"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.17.0",
    "aiosignal>=1.3.2",
    "ffmpeg-python>=0.2.0",
    "openai-whisper>=20240930",
    "pydantic-settings>=2.7.1",
    "pydub>=0.25.1",
    "python-dotenv>=1.0.1",
    "pytube>=15.0.0",
    "pytubefix>=9.2.0",
    "redis[hiredis]>=5.2.1",
]
