[project]
name = "embedthat-bot"
version = "0.1.0"
description = "Embed links from social media and youtube into telegram"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.17.0",
    "aiosignal>=1.3.2",
    "faster-whisper>=1.2.0",
    "ffmpeg-python>=0.2.0",
    "pydantic-settings>=2.7.1",
    "pydub>=0.25.1",
    "python-dotenv>=1.0.1",
    "pytubefix>=10.0.0",
    "redis[hiredis]>=5.2.1",
]
