[project]
name = "embedthat"
version = "0.4.5"
description = "Embed links from social media and youtube into telegram"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.17.0",
    "aiosignal>=1.3.2",
    "dramatiq[redis]>=2.2.0,<3.0.0",
    "faster-whisper>=1.2.0",
    "ffmpeg-python>=0.2.0",
    "pydantic-settings>=2.7.1",
    "pydub>=0.25.1",
    "python-dotenv>=1.0.1",
    "pytubefix>=10.0.0",
    "redis[hiredis]>=5.2.1",
    "yt-dlp>=2026.3.17",
]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
include = ["bot", "main.py"]
exclude = ["**/__pycache__", ".venv", "build", "dist"]
useLibraryCodeForTypes = true
typeCheckingMode = "standard"

reportMissingImports = "error"
reportMissingModuleSource = "warning"
reportMissingTypeStubs = "warning"
reportAttributeAccessIssue = "error"
reportMissingParameterType = "error"
reportUntypedBaseClass = "error"
reportUntypedNamedTuple = "error"
reportUntypedFunctionDecorator = "warning"
reportUntypedClassDecorator = "warning"
reportUnknownParameterType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownVariableType = "warning"
reportUnknownMemberType = "warning"
reportUnknownLambdaType = "warning"
reportPrivateImportUsage = "warning"
reportWildcardImportFromLibrary = "warning"
reportImplicitOverride = "warning"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ANN"]   # ANN = flake8-annotations
ignore = ["ANN401"]                          # allow explicit Any where deliberate

[tool.ruff.format]

[dependency-groups]
dev = [
    "pyright>=1.1.411",
]
